--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                       <div class="banner-card-1">
                         <div class="banner-card">
                           <div class="banner-card-logo-img">
-                            <img class="banner-card-logo" src="/images/green-msg.png">
+                            <img class="banner-card-logo" src="./images/green-msg.png">
                           </div>
                           <h4 class="banner-card-count">2L+</h4>
                           <p class="banner-card-p">Keyword Rank</p>
@@ -127,7 +127,7 @@
                       <div class="banner-card-2">
                         <div class="banner-card">
                           <div class="banner-card-logo-img">
-                            <img class="banner-card-logo" src="/images/green-msg.png">
+                            <img class="banner-card-logo" src="./images/green-msg.png">
                           </div>
                           <h4 class="banner-card-count">2L+</h4>
                           <p class="banner-card-p">Keyword Rank</p>
@@ -138,7 +138,7 @@
                       <div class="banner-card-3">
                         <div class="banner-card">
                           <div class="banner-card-logo-img">
-                            <img class="banner-card-logo" src="/images/green-msg.png">
+                            <img class="banner-card-logo" src="./images/green-msg.png">
                           </div>
                           <h4 class="banner-card-count">2L+</h4>
                           <p class="banner-card-p">Keyword Rank</p>
@@ -149,7 +149,7 @@
                       <div class="banner-card-4">
                         <div class="banner-card">
                           <div class="banner-card-logo-img">
-                            <img class="banner-card-logo" src="/images/green-msg.png">
+                            <img class="banner-card-logo" src="./images/green-msg.png">
                           </div>
                           <h4 class="banner-card-count">2L+</h4>
                           <p class="banner-card-p">Keyword Rank</p>
@@ -164,7 +164,7 @@
                       <div class="item">
                         <div class="banner-card">
                           <div class="banner-card-logo-img">
-                            <img class="banner-card-logo" src="/images/green-msg.png">
+                            <img class="banner-card-logo" src="./images/green-msg.png">
                           </div>
                           <h4 class="banner-card-count">2L+</h4>
                           <p class="banner-card-p">Keyword Rank</p>
@@ -173,7 +173,7 @@
                       <div class="item">
                         <div class="banner-card">
                           <div class="banner-card-logo-img">
-                            <img class="banner-card-logo" src="/images/green-msg.png">
+                            <img class="banner-card-logo" src="./images/green-msg.png">
                           </div>
                           <h4 class="banner-card-count">2L+</h4>
                           <p class="banner-card-p">Keyword Rank</p>
@@ -211,7 +211,7 @@
               <div class="col-md-7">
                 <div class="report-img">
                     <img
-                      src="/images/report-img.svg"
+                      src="./images/report-img.svg"
                       class="report-img-model"
                       alt=""
                     />
@@ -657,7 +657,7 @@
                   </div>
                   <div class="case-card-content">
                     <div class="case-card-logo-image">
-                      <img class="case-card-logo" src="/images/CARS24_Official_New_Logo.png">
+                      <img class="case-card-logo" src="./images/CARS24_Official_New_Logo.png">
                     </div>
                     <div class="case-card-text">
                       <div class="case-card-p">BIKES24 brings the best from the world of pre-owned bikes. They strive to offer superior, genuine, and reliable used bikes to make you happy and save money.</div>
@@ -1234,7 +1234,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
